# serializer version: 1
# name: test_get_keys_response_snapshot
  dict({
    'api_key_type': 'READ',
    'api_version': 'V1.0.11-0.0.41',
    'timestamp_utc': '2022-10-27T18:25:41Z',
  })
# ---
# name: test_get_organization_response_snapshot
  dict({
    'api_version': 'V1.0.11-0.0.41',
    'consumption_rate': 1500,
    'organization_id': 'abc123def456',
    'organization_name': 'Test Org',
    'remaining_points': 50000,
    'timestamp_utc': '2022-10-27T20:40:45Z',
  })
# ---
# name: test_get_sensors_response_snapshot
  dict({
    'api_version': 'V1.0.11-0.0.41',
    'data': dict({
      '131075': dict({
        'altitude': None,
        'analog_input': None,
        'channel_flags': None,
        'channel_flags_auto': None,
        'channel_flags_manual': None,
        'channel_state': None,
        'confidence': None,
        'confidence_auto': None,
        'confidence_manual': None,
        'date_created_utc': None,
        'deciviews': None,
        'deciviews_a': None,
        'deciviews_b': None,
        'firmware_upgrade': None,
        'firmware_version': None,
        'hardware': None,
        'humidity': None,
        'humidity_a': None,
        'humidity_b': None,
        'icon': None,
        'is_owner': None,
        'last_modified_utc': None,
        'last_seen_utc': None,
        'latitude': 33.51511,
        'led_brightness': None,
        'location_type': None,
        'longitude': -117.67972,
        'memory': None,
        'model': None,
        'name': 'Mariners Bluff',
        'ozone1': None,
        'pa_latency': None,
        'pm0_3_um_count': None,
        'pm0_3_um_count_a': None,
        'pm0_3_um_count_b': None,
        'pm0_5_um_count': None,
        'pm0_5_um_count_a': None,
        'pm0_5_um_count_b': None,
        'pm10_0': None,
        'pm10_0_a': None,
        'pm10_0_atm': None,
        'pm10_0_atm_a': None,
        'pm10_0_atm_b': None,
        'pm10_0_b': None,
        'pm10_0_cf_1': None,
        'pm10_0_cf_1_a': None,
        'pm10_0_cf_1_b': None,
        'pm10_0_um_count': None,
        'pm10_0_um_count_a': None,
        'pm10_0_um_count_b': None,
        'pm1_0': None,
        'pm1_0_a': None,
        'pm1_0_atm': None,
        'pm1_0_atm_a': None,
        'pm1_0_atm_b': None,
        'pm1_0_b': None,
        'pm1_0_cf_1': None,
        'pm1_0_cf_1_a': None,
        'pm1_0_cf_1_b': None,
        'pm1_0_um_count': None,
        'pm1_0_um_count_a': None,
        'pm1_0_um_count_b': None,
        'pm2_5': None,
        'pm2_5_10minute': None,
        'pm2_5_10minute_a': None,
        'pm2_5_10minute_b': None,
        'pm2_5_1week': None,
        'pm2_5_1week_a': None,
        'pm2_5_1week_b': None,
        'pm2_5_24hour': None,
        'pm2_5_24hour_a': None,
        'pm2_5_24hour_b': None,
        'pm2_5_30minute': None,
        'pm2_5_30minute_a': None,
        'pm2_5_30minute_b': None,
        'pm2_5_60minute': None,
        'pm2_5_60minute_a': None,
        'pm2_5_60minute_b': None,
        'pm2_5_6hour': None,
        'pm2_5_6hour_a': None,
        'pm2_5_6hour_b': None,
        'pm2_5_a': None,
        'pm2_5_alt': None,
        'pm2_5_alt_a': None,
        'pm2_5_alt_b': None,
        'pm2_5_atm': None,
        'pm2_5_atm_a': None,
        'pm2_5_atm_b': None,
        'pm2_5_b': None,
        'pm2_5_cf_1': None,
        'pm2_5_cf_1_a': None,
        'pm2_5_cf_1_b': None,
        'pm2_5_um_count': None,
        'pm2_5_um_count_a': None,
        'pm2_5_um_count_b': None,
        'pm5_0_um_count': None,
        'pm5_0_um_count_a': None,
        'pm5_0_um_count_b': None,
        'position_rating': None,
        'pressure': None,
        'pressure_a': None,
        'pressure_b': None,
        'primary_id_a': None,
        'primary_id_b': None,
        'primary_key_a': None,
        'primary_key_b': None,
        'private': None,
        'rssi': None,
        'scattering_coefficient': None,
        'scattering_coefficient_a': None,
        'scattering_coefficient_b': None,
        'secondary_id_a': None,
        'secondary_id_b': None,
        'secondary_key_a': None,
        'secondary_key_b': None,
        'sensor_index': 131075,
        'stats': None,
        'stats_a': None,
        'stats_b': None,
        'temperature': None,
        'temperature_a': None,
        'temperature_b': None,
        'uptime': None,
        'visual_range': None,
        'visual_range_a': None,
        'visual_range_b': None,
        'voc': None,
        'voc_a': None,
        'voc_b': None,
      }),
      '131077': dict({
        'altitude': None,
        'analog_input': None,
        'channel_flags': None,
        'channel_flags_auto': None,
        'channel_flags_manual': None,
        'channel_state': None,
        'confidence': None,
        'confidence_auto': None,
        'confidence_manual': None,
        'date_created_utc': None,
        'deciviews': None,
        'deciviews_a': None,
        'deciviews_b': None,
        'firmware_upgrade': None,
        'firmware_version': None,
        'hardware': None,
        'humidity': None,
        'humidity_a': None,
        'humidity_b': None,
        'icon': None,
        'is_owner': None,
        'last_modified_utc': None,
        'last_seen_utc': None,
        'latitude': 37.93273,
        'led_brightness': None,
        'location_type': None,
        'longitude': -122.03972,
        'memory': None,
        'model': None,
        'name': 'BEE Patio',
        'ozone1': None,
        'pa_latency': None,
        'pm0_3_um_count': None,
        'pm0_3_um_count_a': None,
        'pm0_3_um_count_b': None,
        'pm0_5_um_count': None,
        'pm0_5_um_count_a': None,
        'pm0_5_um_count_b': None,
        'pm10_0': None,
        'pm10_0_a': None,
        'pm10_0_atm': None,
        'pm10_0_atm_a': None,
        'pm10_0_atm_b': None,
        'pm10_0_b': None,
        'pm10_0_cf_1': None,
        'pm10_0_cf_1_a': None,
        'pm10_0_cf_1_b': None,
        'pm10_0_um_count': None,
        'pm10_0_um_count_a': None,
        'pm10_0_um_count_b': None,
        'pm1_0': None,
        'pm1_0_a': None,
        'pm1_0_atm': None,
        'pm1_0_atm_a': None,
        'pm1_0_atm_b': None,
        'pm1_0_b': None,
        'pm1_0_cf_1': None,
        'pm1_0_cf_1_a': None,
        'pm1_0_cf_1_b': None,
        'pm1_0_um_count': None,
        'pm1_0_um_count_a': None,
        'pm1_0_um_count_b': None,
        'pm2_5': None,
        'pm2_5_10minute': None,
        'pm2_5_10minute_a': None,
        'pm2_5_10minute_b': None,
        'pm2_5_1week': None,
        'pm2_5_1week_a': None,
        'pm2_5_1week_b': None,
        'pm2_5_24hour': None,
        'pm2_5_24hour_a': None,
        'pm2_5_24hour_b': None,
        'pm2_5_30minute': None,
        'pm2_5_30minute_a': None,
        'pm2_5_30minute_b': None,
        'pm2_5_60minute': None,
        'pm2_5_60minute_a': None,
        'pm2_5_60minute_b': None,
        'pm2_5_6hour': None,
        'pm2_5_6hour_a': None,
        'pm2_5_6hour_b': None,
        'pm2_5_a': None,
        'pm2_5_alt': None,
        'pm2_5_alt_a': None,
        'pm2_5_alt_b': None,
        'pm2_5_atm': None,
        'pm2_5_atm_a': None,
        'pm2_5_atm_b': None,
        'pm2_5_b': None,
        'pm2_5_cf_1': None,
        'pm2_5_cf_1_a': None,
        'pm2_5_cf_1_b': None,
        'pm2_5_um_count': None,
        'pm2_5_um_count_a': None,
        'pm2_5_um_count_b': None,
        'pm5_0_um_count': None,
        'pm5_0_um_count_a': None,
        'pm5_0_um_count_b': None,
        'position_rating': None,
        'pressure': None,
        'pressure_a': None,
        'pressure_b': None,
        'primary_id_a': None,
        'primary_id_b': None,
        'primary_key_a': None,
        'primary_key_b': None,
        'private': None,
        'rssi': None,
        'scattering_coefficient': None,
        'scattering_coefficient_a': None,
        'scattering_coefficient_b': None,
        'secondary_id_a': None,
        'secondary_id_b': None,
        'secondary_key_a': None,
        'secondary_key_b': None,
        'sensor_index': 131077,
        'stats': None,
        'stats_a': None,
        'stats_b': None,
        'temperature': None,
        'temperature_a': None,
        'temperature_b': None,
        'uptime': None,
        'visual_range': None,
        'visual_range_a': None,
        'visual_range_b': None,
        'voc': None,
        'voc_a': None,
        'voc_b': None,
      }),
      '131079': dict({
        'altitude': None,
        'analog_input': None,
        'channel_flags': None,
        'channel_flags_auto': None,
        'channel_flags_manual': None,
        'channel_state': None,
        'confidence': None,
        'confidence_auto': None,
        'confidence_manual': None,
        'date_created_utc': None,
        'deciviews': None,
        'deciviews_a': None,
        'deciviews_b': None,
        'firmware_upgrade': None,
        'firmware_version': None,
        'hardware': None,
        'humidity': None,
        'humidity_a': None,
        'humidity_b': None,
        'icon': None,
        'is_owner': None,
        'last_modified_utc': None,
        'last_seen_utc': None,
        'latitude': 37.75315,
        'led_brightness': None,
        'location_type': None,
        'longitude': -122.44364,
        'memory': None,
        'model': None,
        'name': 'BRSKBV-outside',
        'ozone1': None,
        'pa_latency': None,
        'pm0_3_um_count': None,
        'pm0_3_um_count_a': None,
        'pm0_3_um_count_b': None,
        'pm0_5_um_count': None,
        'pm0_5_um_count_a': None,
        'pm0_5_um_count_b': None,
        'pm10_0': None,
        'pm10_0_a': None,
        'pm10_0_atm': None,
        'pm10_0_atm_a': None,
        'pm10_0_atm_b': None,
        'pm10_0_b': None,
        'pm10_0_cf_1': None,
        'pm10_0_cf_1_a': None,
        'pm10_0_cf_1_b': None,
        'pm10_0_um_count': None,
        'pm10_0_um_count_a': None,
        'pm10_0_um_count_b': None,
        'pm1_0': None,
        'pm1_0_a': None,
        'pm1_0_atm': None,
        'pm1_0_atm_a': None,
        'pm1_0_atm_b': None,
        'pm1_0_b': None,
        'pm1_0_cf_1': None,
        'pm1_0_cf_1_a': None,
        'pm1_0_cf_1_b': None,
        'pm1_0_um_count': None,
        'pm1_0_um_count_a': None,
        'pm1_0_um_count_b': None,
        'pm2_5': None,
        'pm2_5_10minute': None,
        'pm2_5_10minute_a': None,
        'pm2_5_10minute_b': None,
        'pm2_5_1week': None,
        'pm2_5_1week_a': None,
        'pm2_5_1week_b': None,
        'pm2_5_24hour': None,
        'pm2_5_24hour_a': None,
        'pm2_5_24hour_b': None,
        'pm2_5_30minute': None,
        'pm2_5_30minute_a': None,
        'pm2_5_30minute_b': None,
        'pm2_5_60minute': None,
        'pm2_5_60minute_a': None,
        'pm2_5_60minute_b': None,
        'pm2_5_6hour': None,
        'pm2_5_6hour_a': None,
        'pm2_5_6hour_b': None,
        'pm2_5_a': None,
        'pm2_5_alt': None,
        'pm2_5_alt_a': None,
        'pm2_5_alt_b': None,
        'pm2_5_atm': None,
        'pm2_5_atm_a': None,
        'pm2_5_atm_b': None,
        'pm2_5_b': None,
        'pm2_5_cf_1': None,
        'pm2_5_cf_1_a': None,
        'pm2_5_cf_1_b': None,
        'pm2_5_um_count': None,
        'pm2_5_um_count_a': None,
        'pm2_5_um_count_b': None,
        'pm5_0_um_count': None,
        'pm5_0_um_count_a': None,
        'pm5_0_um_count_b': None,
        'position_rating': None,
        'pressure': None,
        'pressure_a': None,
        'pressure_b': None,
        'primary_id_a': None,
        'primary_id_b': None,
        'primary_key_a': None,
        'primary_key_b': None,
        'private': None,
        'rssi': None,
        'scattering_coefficient': None,
        'scattering_coefficient_a': None,
        'scattering_coefficient_b': None,
        'secondary_id_a': None,
        'secondary_id_b': None,
        'secondary_key_a': None,
        'secondary_key_b': None,
        'sensor_index': 131079,
        'stats': None,
        'stats_a': None,
        'stats_b': None,
        'temperature': None,
        'temperature_a': None,
        'temperature_b': None,
        'uptime': None,
        'visual_range': None,
        'visual_range_a': None,
        'visual_range_b': None,
        'voc': None,
        'voc_a': None,
        'voc_b': None,
      }),
      '131083': dict({
        'altitude': None,
        'analog_input': None,
        'channel_flags': None,
        'channel_flags_auto': None,
        'channel_flags_manual': None,
        'channel_state': None,
        'confidence': None,
        'confidence_auto': None,
        'confidence_manual': None,
        'date_created_utc': None,
        'deciviews': None,
        'deciviews_a': None,
        'deciviews_b': None,
        'firmware_upgrade': None,
        'firmware_version': None,
        'hardware': None,
        'humidity': None,
        'humidity_a': None,
        'humidity_b': None,
        'icon': None,
        'is_owner': None,
        'last_modified_utc': None,
        'last_seen_utc': None,
        'latitude': 38.287594,
        'led_brightness': None,
        'location_type': None,
        'longitude': -122.46281,
        'memory': None,
        'model': None,
        'name': 'Test Sensor',
        'ozone1': None,
        'pa_latency': None,
        'pm0_3_um_count': None,
        'pm0_3_um_count_a': None,
        'pm0_3_um_count_b': None,
        'pm0_5_um_count': None,
        'pm0_5_um_count_a': None,
        'pm0_5_um_count_b': None,
        'pm10_0': None,
        'pm10_0_a': None,
        'pm10_0_atm': None,
        'pm10_0_atm_a': None,
        'pm10_0_atm_b': None,
        'pm10_0_b': None,
        'pm10_0_cf_1': None,
        'pm10_0_cf_1_a': None,
        'pm10_0_cf_1_b': None,
        'pm10_0_um_count': None,
        'pm10_0_um_count_a': None,
        'pm10_0_um_count_b': None,
        'pm1_0': None,
        'pm1_0_a': None,
        'pm1_0_atm': None,
        'pm1_0_atm_a': None,
        'pm1_0_atm_b': None,
        'pm1_0_b': None,
        'pm1_0_cf_1': None,
        'pm1_0_cf_1_a': None,
        'pm1_0_cf_1_b': None,
        'pm1_0_um_count': None,
        'pm1_0_um_count_a': None,
        'pm1_0_um_count_b': None,
        'pm2_5': None,
        'pm2_5_10minute': None,
        'pm2_5_10minute_a': None,
        'pm2_5_10minute_b': None,
        'pm2_5_1week': None,
        'pm2_5_1week_a': None,
        'pm2_5_1week_b': None,
        'pm2_5_24hour': None,
        'pm2_5_24hour_a': None,
        'pm2_5_24hour_b': None,
        'pm2_5_30minute': None,
        'pm2_5_30minute_a': None,
        'pm2_5_30minute_b': None,
        'pm2_5_60minute': None,
        'pm2_5_60minute_a': None,
        'pm2_5_60minute_b': None,
        'pm2_5_6hour': None,
        'pm2_5_6hour_a': None,
        'pm2_5_6hour_b': None,
        'pm2_5_a': None,
        'pm2_5_alt': None,
        'pm2_5_alt_a': None,
        'pm2_5_alt_b': None,
        'pm2_5_atm': None,
        'pm2_5_atm_a': None,
        'pm2_5_atm_b': None,
        'pm2_5_b': None,
        'pm2_5_cf_1': None,
        'pm2_5_cf_1_a': None,
        'pm2_5_cf_1_b': None,
        'pm2_5_um_count': None,
        'pm2_5_um_count_a': None,
        'pm2_5_um_count_b': None,
        'pm5_0_um_count': None,
        'pm5_0_um_count_a': None,
        'pm5_0_um_count_b': None,
        'position_rating': None,
        'pressure': None,
        'pressure_a': None,
        'pressure_b': None,
        'primary_id_a': None,
        'primary_id_b': None,
        'primary_key_a': None,
        'primary_key_b': None,
        'private': None,
        'rssi': None,
        'scattering_coefficient': None,
        'scattering_coefficient_a': None,
        'scattering_coefficient_b': None,
        'secondary_id_a': None,
        'secondary_id_b': None,
        'secondary_key_a': None,
        'secondary_key_b': None,
        'sensor_index': 131083,
        'stats': None,
        'stats_a': None,
        'stats_b': None,
        'temperature': None,
        'temperature_a': None,
        'temperature_b': None,
        'uptime': None,
        'visual_range': None,
        'visual_range_a': None,
        'visual_range_b': None,
        'voc': None,
        'voc_a': None,
        'voc_b': None,
      }),
      '30303': dict({
        'altitude': None,
        'analog_input': None,
        'channel_flags': None,
        'channel_flags_auto': None,
        'channel_flags_manual': None,
        'channel_state': None,
        'confidence': None,
        'confidence_auto': None,
        'confidence_manual': None,
        'date_created_utc': None,
        'deciviews': None,
        'deciviews_a': None,
        'deciviews_b': None,
        'firmware_upgrade': None,
        'firmware_version': None,
        'hardware': None,
        'humidity': None,
        'humidity_a': None,
        'humidity_b': None,
        'icon': None,
        'is_owner': None,
        'last_modified_utc': None,
        'last_seen_utc': None,
        'latitude': None,
        'led_brightness': None,
        'location_type': None,
        'longitude': None,
        'memory': None,
        'model': None,
        'name': '아가페_실내',
        'ozone1': None,
        'pa_latency': None,
        'pm0_3_um_count': None,
        'pm0_3_um_count_a': None,
        'pm0_3_um_count_b': None,
        'pm0_5_um_count': None,
        'pm0_5_um_count_a': None,
        'pm0_5_um_count_b': None,
        'pm10_0': None,
        'pm10_0_a': None,
        'pm10_0_atm': None,
        'pm10_0_atm_a': None,
        'pm10_0_atm_b': None,
        'pm10_0_b': None,
        'pm10_0_cf_1': None,
        'pm10_0_cf_1_a': None,
        'pm10_0_cf_1_b': None,
        'pm10_0_um_count': None,
        'pm10_0_um_count_a': None,
        'pm10_0_um_count_b': None,
        'pm1_0': None,
        'pm1_0_a': None,
        'pm1_0_atm': None,
        'pm1_0_atm_a': None,
        'pm1_0_atm_b': None,
        'pm1_0_b': None,
        'pm1_0_cf_1': None,
        'pm1_0_cf_1_a': None,
        'pm1_0_cf_1_b': None,
        'pm1_0_um_count': None,
        'pm1_0_um_count_a': None,
        'pm1_0_um_count_b': None,
        'pm2_5': None,
        'pm2_5_10minute': None,
        'pm2_5_10minute_a': None,
        'pm2_5_10minute_b': None,
        'pm2_5_1week': None,
        'pm2_5_1week_a': None,
        'pm2_5_1week_b': None,
        'pm2_5_24hour': None,
        'pm2_5_24hour_a': None,
        'pm2_5_24hour_b': None,
        'pm2_5_30minute': None,
        'pm2_5_30minute_a': None,
        'pm2_5_30minute_b': None,
        'pm2_5_60minute': None,
        'pm2_5_60minute_a': None,
        'pm2_5_60minute_b': None,
        'pm2_5_6hour': None,
        'pm2_5_6hour_a': None,
        'pm2_5_6hour_b': None,
        'pm2_5_a': None,
        'pm2_5_alt': None,
        'pm2_5_alt_a': None,
        'pm2_5_alt_b': None,
        'pm2_5_atm': None,
        'pm2_5_atm_a': None,
        'pm2_5_atm_b': None,
        'pm2_5_b': None,
        'pm2_5_cf_1': None,
        'pm2_5_cf_1_a': None,
        'pm2_5_cf_1_b': None,
        'pm2_5_um_count': None,
        'pm2_5_um_count_a': None,
        'pm2_5_um_count_b': None,
        'pm5_0_um_count': None,
        'pm5_0_um_count_a': None,
        'pm5_0_um_count_b': None,
        'position_rating': None,
        'pressure': None,
        'pressure_a': None,
        'pressure_b': None,
        'primary_id_a': None,
        'primary_id_b': None,
        'primary_key_a': None,
        'primary_key_b': None,
        'private': None,
        'rssi': None,
        'scattering_coefficient': None,
        'scattering_coefficient_a': None,
        'scattering_coefficient_b': None,
        'secondary_id_a': None,
        'secondary_id_b': None,
        'secondary_key_a': None,
        'secondary_key_b': None,
        'sensor_index': 30303,
        'stats': None,
        'stats_a': None,
        'stats_b': None,
        'temperature': None,
        'temperature_a': None,
        'temperature_b': None,
        'uptime': None,
        'visual_range': None,
        'visual_range_a': None,
        'visual_range_b': None,
        'voc': None,
        'voc_a': None,
        'voc_b': None,
      }),
    }),
    'data_timestamp_utc': '2022-11-03T19:25:31Z',
    'fields': list([
      'sensor_index',
      'name',
      'latitude',
      'longitude',
    ]),
    'firmware_default_version': '7.02',
    'max_age': 604800,
    'timestamp_utc': '2022-11-03T19:26:29Z',
  })
# ---
